# cardgame

./: Cargo.toml  cert.der  key.der
src/: client.rs  gender.rs  main.rs
src/common/: card.rs  mod.rs  net.rs
