[package]
name = "cardserver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "gen"
path = "src/gender.rs"

[dependencies]
quinn = {version="0.11.9",features = ["ring","aws-lc-rs"]}
quinn-proto = {version="0.11.13",features = ["rustls-ring"]}
anyhow = "1.0.100"
clap = {version = "4.5.57",features = ["derive"]}
rustls = {version =  "0.23.36", features = ["default","aws-lc-rs","ring"]}
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.22"
tokio = {version="1.49.0",features = ["full"] }
directories-next = "2.0.0"
rcgen = "0.14.7"
url = "2.5.8"
serde = {version="1.0.228", default-features = false}
serde_json = "1.0.149"
egui = "0.33.3"
eframe = "0.33.3"
egui_extras = {version="0.33.3",features = ["all_loaders"]}
tokio-stream = "0.1.18"
postcard = {version="1.1.3",features = ["alloc"]}
heapless = "0.9.2"
once_cell = "1.21.3"
futures = "0.3.31"
bytes = "1.11.1"
rand = "0.10.0"